// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout page when there is payment token should render cancelled component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={true}
      className="css-1om1j8f"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={true}
      className="css-14djarr"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      className="css-1mi3tt8"
    >
      <h2
        className="css-84al3w"
      >
        Payment Cancelled
      </h2>
      <p
        className="css-441ftm"
      >
        Successfuly cancelled intent:
         
        <span
          className="css-4i139l"
        >
          id
        </span>
      </p>
    </div>
  </Elements>
</div>
`;

exports[`Checkout page when there is payment token should render confirm component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={true}
      className="css-1om1j8f"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={false}
      className="css-1mi3tt8"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    
  </Elements>
</div>
`;

exports[`Checkout page when there is payment token should render error component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={true}
      className="css-1om1j8f"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={true}
      className="css-14djarr"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      className="css-1mi3tt8"
    >
      <p
        className="css-1po2p9s"
      >
        <strong>
          Error:
        </strong>
        <br />
        <em>
          message
        </em>
      </p>
      <button
        className="css-187kagv"
        data-cy="button"
        href="#0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        retry
      </button>
    </div>
  </Elements>
</div>
`;

exports[`Checkout page when there is payment token should render form component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={false}
      className="css-8o331q"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={true}
      className="css-14djarr"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    
  </Elements>
</div>
`;

exports[`Checkout page when there is payment token should render review component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={null}
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={true}
      className="css-1om1j8f"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={true}
      className="css-14djarr"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      className="css-dvxtzn"
    >
      <div
        className="css-1ofqig9"
      >
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-1hojse"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          BACK TO SHOPPING
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          PAYMENT DETAILS
        </button>
      </div>
    </div>
  </Elements>
</div>
`;

exports[`Checkout page when there is payment token should render success component in Elements 1`] = `
<div
  className="css-w6sf3q"
>
  <Elements
    stripe="stripe"
  >
    <div
      className="css-12glmx8"
    >
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Review
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Payment Details
      </p>
      <svg
        className="css-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
        />
      </svg>
      <p
        className="css-18poma1"
        style={
          Object {
            "color": "#44337A",
            "fontWeight": "bold",
          }
        }
      >
        Finished
      </p>
    </div>
    <form
      aria-hidden={true}
      className="css-1om1j8f"
    >
      <fieldset
        className="css-94sf3x"
      >
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="name"
          >
            name
          </label>
          <input
            autoComplete="name"
            className="css-cth1sm"
            id="name"
            onChange={[Function]}
            placeholder="Jane Doe"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="address"
          >
            address
          </label>
          <input
            autoComplete="address"
            className="css-cth1sm"
            id="address"
            onChange={[Function]}
            placeholder="J191 S. Illinois Street, Everett, MA 02149"
            required={true}
            type="text"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="email"
          >
            email
          </label>
          <input
            autoComplete="email"
            className="css-cth1sm"
            id="email"
            onChange={[Function]}
            placeholder="janedoe@gmail.com"
            required={true}
            type="email"
            value=""
          />
        </fieldset>
        <fieldset
          className="css-9x3bhi"
        >
          <label
            className="css-1xnp38i"
            htmlFor="phone"
          >
            phone
          </label>
          <input
            autoComplete="tel"
            className="css-cth1sm"
            id="phone"
            onChange={[Function]}
            placeholder="(941) 555-0123"
            required={true}
            type="tel"
            value=""
          />
        </fieldset>
        <div
          className="css-70qvj9"
        >
          <label
            className="css-1gjn3mk"
            htmlFor="StripeElement"
          >
            card
          </label>
          <p
            className="css-1i3anel"
          >
            Use any date and CVC with 
            <strong>
              4242 4242 4242 4242
            </strong>
             
            number for testing
          </p>
          <p
            className="css-cz9gy2"
          />
        </div>
        <CardElement
          data-testid="cardElement"
          onChange={[Function]}
          options={
            Object {
              "hidePostalCode": true,
              "iconStyle": "solid",
              "style": Object {
                "base": Object {
                  ":-webkit-autofill": Object {
                    "color": "#fce883",
                  },
                  "::placeholder": Object {
                    "color": "#4A5568",
                  },
                  "border": "1px solid black",
                  "color": "#1A202C",
                  "fontFamily": "Montserrat, Open Sans, Segoe UI, sans-serif",
                  "fontSize": "16px",
                  "fontSmoothing": "antialiased",
                  "fontWeight": 500,
                  "iconColor": "#1A202C",
                },
                "invalid": Object {
                  "color": "#f#C53030",
                  "iconColor": "##C53030",
                },
              },
            }
          }
        />
      </fieldset>
      <p
        className="css-1yab5hb"
      >
        By proceeding you accept the
         
        <a
          className="css-1c5zfe9"
        >
          Terms of Service
        </a>
         
        of the company.
      </p>
      <div
        className="css-1rsrz83"
      >
        <button
          className="css-1h13z07"
          data-cy="button"
          data-testid="review-button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="button"
        >
          BACK TO REVIEW
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          data-testid="submit-button"
          disabled={true}
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
          type="submit"
        >
          FILL THE FORM
        </button>
      </div>
    </form>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      aria-hidden={true}
      className="css-14djarr"
    >
      <h2
        className="css-84al3w"
      >
        hey 
        name
        !
      </h2>
      <p
        className="css-1358t0d"
      >
        Please review your payment details:
      </p>
      <div
        className="css-13cm5uv"
      >
        <div
          className="css-d34wob"
        >
          <p
            className="css-18poma1"
          >
            INTENT ID
          </p>
          <p
            className="css-1n4bukm"
          >
            id
          </p>
          <p
            className="css-18poma1"
          >
            EMAIL
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            PHONE
          </p>
          <p
            className="css-1n4bukm"
          />
          <p
            className="css-18poma1"
          >
            ADDRESS
          </p>
          <p
            className="css-1n4bukm"
          />
        </div>
        <section
          id="cart-holder"
          role="list"
        >
          <article
            className="css-74stbp"
            role="listitem"
          >
            <img
              alt="name"
              className="css-1wz2hfr"
            />
            <strong
              className="css-17uar4q"
            >
              name
               - 
              color
            </strong>
            <strong
              className="css-1nnp1eg"
            >
              price
               $
            </strong>
            <svg
              aria-label="Item info"
              className="css-fwtiw2"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 192 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              />
            </svg>
            <svg
              aria-label="Delete item"
              className="css-12o82jn"
              data-cy="button"
              fill="currentColor"
              height="1em"
              href="#0"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              tabIndex={0}
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
              />
            </svg>
          </article>
          <footer>
            <h3
              className="css-ohvq3n"
              id="total-summary"
            >
              TOTAL PRICE
            </h3>
            <strong
              aria-describedby="total-summary"
              className="css-lk14dv"
              id="total-price"
            >
               $
            </strong>
          </footer>
        </section>
      </div>
      <div
        className="css-dvxksz"
      >
        <button
          className="css-46aqdj"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CANCEL ORDER
        </button>
        <button
          className="css-187kagv"
          data-cy="button"
          href="#0"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          CONFIRM ORDER
        </button>
      </div>
    </div>
    <div
      className="css-zyfixl"
    >
      <div
        className="css-1gy22ay"
      >
        Loading...
      </div>
    </div>
    <div
      className="css-1mi3tt8"
    >
      <h2
        className="css-84al3w"
      >
        Payment Successful
      </h2>
      <p
        className="css-441ftm"
      >
        Received intent number:
         
        <span
          className="css-4i139l"
        >
          id
        </span>
      </p>
      <p
        className="css-18poma1"
      >
        This was a sample transaction to demonstrate the payment flow. Thank you!
      </p>
    </div>
  </Elements>
</div>
`;
